it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.42.1 - December 22, 2010

    Added support to the Logtalk compiler for detecting and reporting
    (possibly) missing dynamic/1 predicate directives.

    Added support for new meta-predicate template mode indicators: (/) for a
    predicate indicator, [/] for a list of predicate indicators, and [0] for
    a list of goals.

    Corrected a bug in the Logtalk compiler when checking meta-predicate
    clause heads for errors where the "::" meta-argument mode indicator
    was still being interpreted as "0".

    Corrected a bug in the handling of closures (in meta-calls) that are
    used to construct calls to control constructs or built-in predicates
    which could result in calling some meta-arguments in the wrong context.
    Thanks to Ulrich Neumerkel for the illustrating example in the SWI-Prolog
    mailing list.

    Updated the Logtalk compiler in order to avoid printing warnings about
    missing references to the "expanding" and "monitoring" built-in protocols
    when compiling modules as objects.

    Corrected a bug in the SWI-Prolog "swihooks.lgt" file that resulted in
    a bogus error message about an invalid Logtalk flag when consulting a
    Prolog file when there is a Logtalk source file with the same name in
    the same directory.

    Added missing support for proprietary built-in meta-predicates to the
    B-Prolog, SICStus Prolog, SWI-Prolog, XSB, and YAP config files.

    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order to
    override the meta-predicate templates for the consult/1 and load_files/2
    built-in predicates.

    Added an implementation of a map_reduce/5 meta-predicate to the library
    object "meta".

    Added an implementation of a command_line_arguments/1 predicate to the